# C14-Engenharia-de-Software

./: .gitignore  README.md  desktop.ini  main.py  pyproject.toml
src/: main.py
tests/: conftest.py  test_Nan.py  test_inteiros.py  test_large_scale.py  test_main.py  test_matriz_a_3x3.py  test_matriz_b_3x3.py  test_matriz_type_different.py  test_matrizes_size_different.py  test_nparray.py  test_only_number_matriz_a.py  test_only_number_matriz_b.py  test_only_number_positive_matriz_a.py  test_only_number_positive_matriz_b.py  test_type_float.py  test_verification_matrizes.py
