[project]
name = "Engenharia_Software"
version = "0.1.0"
description = "Dependencias-versionamento"
authors = [
    {name = "Kaik", email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"

[tool.poetry]
package-mode = false  # Desabilita a instalação do pacote

[tool.poetry.dependencies]
numpy = "^2.3.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
